--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,22 @@
-{
-  "manifest_version": 2,
-
-  "name": "YouTube Playlist Viewed Hider",
-  "description": "Hides those items in YouTube Playlists you already viewed using CSS",
-  "version": "1.0",
-
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html",
-    "default_title": "Hide items"
-  },
-  "permissions": [
-    "activeTab",
-    "https://ajax.googleapis.com/"
-  ]
+  {
+    "name": "Page action by URL",
+    "version": "1.0",
+    "description": "Shows a page action for urls which have the letter 'g' in them.",
+    "background": {
+      "scripts": ["popup.js"],
+      "persistent": false
+    },
+    "page_action" :
+    {
+     "default_icon" : "icon.png",
+     "default_title" : "There's a 'G' in this URL!"
+   },
+   "permissions" : [
+     "declarativeContent"
+   ],
+   "icons" : {
+     "48" : "icon.png",
+     "128" : "icon.png"
+   },
+   "manifest_version": 2
 }
